fix: cdk overlay z-index

--- a/apps/gauzy/src/app/@theme/styles/_overrides.scss
+++ b/apps/gauzy/src/app/@theme/styles/_overrides.scss
@@ -22,6 +22,10 @@ body {
   overflow-y: overlay;
 }
 
+.cdk-overlay-container {
+  z-index: 1050 !important;
+}
+
 .dashboard-card-scroll nb-card {
   background: nb-theme(background-basic-color-1);
   box-shadow: 0px 6px 20px 0px rgba(0, 0, 0, 0.05);
